# SciREX

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_old.md  CONTRIBUTORS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: code-quality-control.yml  copyright-check.yml  main.yml  on-release-main.yml  unit-tests.yml  validate-codecov-config.yml
docs/: index.md
docs/api/experimental/Contribution/: contribution.md
docs/api/experimental/examples/dl/: cnn_mnist.md  gcn_cora.md  mnist_train.md  vae_mnist.md
docs/api/experimental/examples/model compression/: pruned_base_mnist.md  pruned_mnist.md  quantized_base_mnist.md  quantized_mnist.md
docs/api/experimental/examples/sciml/fastvpinns/: example_helmholtz2d.md  example_poisson2d.md
docs/api/experimental/examples/sciml/fno/: example_advection.md  example_heat.md  example_wave.md
docs/api/experimental/ml/supervised/classification/: base.md  decision_tree.md  logistic_regression.md  naive_bayes.md  svm.md
docs/api/experimental/ml/supervised/regression/: base.md  lasso_regression.md  linear_regression.md  polynomial_regression.md  ridge_regression.md  svr.md
docs/api/experimental/ml/unsupervised/clustering/: agglomerative.md  base.md  dbscan.md  gmm.md  hdbscan.md  kmeans.md  optics.md
docs/api/experimental/model_compression/: pruning.md  quantization.md
docs/api/experimental/sciml/fastvpinns/data/: datahandler.md  datahandler2d.md
docs/api/experimental/sciml/fastvpinns/model/: model.md  model_hard.md  model_inverse.md  model_inverse_domain.md
docs/api/experimental/sciml/fe/: basis_2d_QN_Chebyshev_2.md  basis_2d_QN_Jacobi.md  basis_2d_QN_Legendre.md  basis_2d_QN_Legendre_Special.md  basis_function_2d.md  basis_function_3d.md  fe2d_cell.md  fe2d_setup_main.md  fe_transformation_2d.md  fe_transformation_3d.md  fespace.md  fespace2d.md  quad_affine.md  quad_bilinear.md  quadratureformulas.md  quadratureformulas_quad2d.md
docs/api/experimental/sciml/geometry/: geometry.md  geometry_2d.md
docs/api/nn/: activation.md  base.md  loss.md  metrics.md  others.md
docs/api/nn/layer/: attention.md  convolution.md  dropout.md  embeddings.md  fcnn.md  gcn.md  linear.md  mlp.md  normalisation.md  pooling.md  recurrent.md  sequential.md
examples/experimental/dl/: README.md  cnn_mnist.py  gcn_cora.py  vae_mnist.py
examples/experimental/ml/supervised/classification/: README.md  example_logistic_regression.py  example_naive_bayes.py
examples/experimental/ml/supervised/regression/: example_lasso_regression.py  example_linear_regression.py  example_polynomial_regression.py  example_ridge_regression.py  example_svr.py
examples/experimental/ml/unsupervised/clustering/: README.md  example_kmeans.py
examples/experimental/model_compression/: README.md  pruned_base_mnist.py  pruned_mnist.py  quantized_base_mnist.py  quantized_mnist.py  tensor_svd.py
examples/experimental/model_reduction_pipeline/pipeline/src/: datasets.py  main.py  main_script.py  model_cnn.py  models.py  pruning.py  quantization.py
examples/experimental/sciml/fastvpinns/forward_problems/: example_helmholtz2d.md  example_helmholtz2d.py  example_poisson2d.md  example_poisson2d.py
examples/experimental/sciml/fastvpinns/inverse_problems/: example_inverse_poisson2d.md  example_inverse_poisson2d.py
examples/experimental/sciml/pinns/forward_problems/: example_maxwell.py  example_permafrost.py  example_poisson2d.py
examples/experimental/sciml/super_resolution/: README.md
examples/experimental/sciml/super_resolution/experiments_pdes/: example_advection.md  example_advection.py  example_burgers.md  example_burgers.py  example_heat.md  example_heat.py  example_poisson_2d.md  example_poisson_2d.py  example_wave.md  example_wave.py
examples/mnist/: README.md  mnist_example.ipynb  train.py
examples/simple/: toy_diffusion.ipynb
scirex/experimental/dl/: README.md
scirex/experimental/dl/jax_backend/equinox/: base.py
scirex/experimental/dl/tf_backend/: datautils.py
scirex/experimental/dl/tf_backend/layers/: base.py  dense.py
scirex/experimental/dl/tf_backend/networks/: fcnn.py
scirex/experimental/ml/supervised/classification/: decision_tree.py  svm.py
scirex/experimental/ml/supervised/regression/: lasso_regression.py  linear_regression.py  polynomial_regression.py  ridge_regression.py  svr.py
scirex/experimental/ml/unsupervised/clustering/: gmm.py  kmeans.py
scirex/experimental/model_compression/: pruning.py  quantization.py
scirex/experimental/sciml/deeponet/: base.py  unstacked.py
scirex/experimental/sciml/fastvpinns/: __init__.py
scirex/experimental/sciml/fe/: README.md  basis_2d_qn_chebyshev_2.py  basis_2d_qn_jacobi.py  basis_2d_qn_legendre.py  basis_2d_qn_legendre_special.py  basis_function_2d.py  basis_function_3d.py  fe2d_cell.py  fe2d_setup_main.py  fe_transformation_2d.py  fe_transformation_3d.py  fespace.py  quad_bilinear.py  quadratureformulas.py  quadratureformulas_quad2d.py
scirex/experimental/sciml/fno/: __init__.py
scirex/experimental/sciml/pinns/: __init__.py
scirex/experimental/torch/sciml/data/: NSDataset.py  README.md
scirex/experimental/torch/sciml/utils/: evaluate.py  physics_loss.py  trainer.py
scirex/nn/: README.md  activations.py  base.py  losses.py  metrics.py  utils.py
scirex/nn/layers/: __init__.py  attention.py  convolution.py  dropout.py  embeddings.py  fcnn.py  gcn.py  linear.py  mlp.py  normalisation.py  pooling.py  recurrent.py  sequential.py
scirex/nn/layers/lora/: __init__.py  lora.py
scirex/nn/layers/normalization/: __init__.py  batch.py  group.py  layer.py  weight.py
scirex/nn/layers/recurrent/: __init__.py  cells.py  wrappers.py
scirex/training/: trainer.py
tests/others/: test_copyright.py
tests/scirex/experimental/dl/: test_base.py  test_fcnn.py  test_gcn.py  test_mlp.py  test_nn.py
tests/scirex/experimental/sciml/fno/: conftest.py  test_fno.py
tests/scirex/nn/: __init__.py  test_activations.py  test_base.py  test_layers.py  test_losses.py  test_metrics.py  test_utils.py
(+57 files in other folders)
