[project]
name = "scirex"
version = "0.1.0"
description = "SciREX: Scientific Research and Engineering eXcellence Framework is an open-source scientific AI and machine learning framework designed for researchers and engineers."
readme = "README.md"
requires-python = ">=3.10, <4.0"
license = { text = "Apache-2.0" }
keywords = [
    "scientific-computing",
    "machine-learning",
    "physics-informed-neural-networks",
    "differential-equations",
    "scientific-visualization"
]
authors = [
    { name = "Zenteiq Aitech Innovations Private Limited", email = "contact@zenteiq.ai" },
    { name = "AiREX Lab, Indian Institute of Science", email = "contact@airexlab.org" }
]
maintainers = [
    { name = "Zenteiq Aitech Innovations", email = "contact@scirex.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "polars>=1.37.1",
    "seaborn>=0.13.2",
    "tqdm>=4.66.3",
]

[project.optional-dependencies]
# Core neural network dependencies (scirex.nn)
nn = [
    "jax>=0.4.0",
    "flax>=0.10.0",
    "optax>=0.2.0",
    "matplotlib>=3.4.0",
]

# Experimental features (moved from core, uses numpy<2.0 for TensorFlow compatibility)
experimental = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.13.0",
    "xgboost>=2.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "tensorflow>=2.15.0",
    "meshio>=5.3.0",
    "pyDOE>=0.3.8",
    "scipy>=1.11.0",
    "gmsh>=4.11.0",
    "pyyaml>=6.0.0",
    "tensorflow-model-optimization>=0.8.0",
    "torch>=2.0.0",
    "torch_geometric>=2.3.0",
]

# Development dependencies
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
]

[project.urls]
Homepage = "https://scirex.org/"
Documentation = "https://scirex.org/doc/"
Repository = "https://github.com/zenoxml/SciREX"
"Bug Tracker" = "https://github.com/zenoxml/SciREX/issues"
"Research Blog" = "https://scirex.org/blog"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scirex"
module-root = ""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=scirex"
testpaths = [ "tests" ]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.coverage.run]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]
